rs/ethexe/macros-tests/tests/ui/validation_gservice_fails_export_duplicate_ethabi.stderr
error: `export` attribute cannot be parsed: duplicate `ethabi` flag in `#[export]`
 --> tests/ui/validation_gservice_fails_export_duplicate_ethabi.rs:7:22
  |
7 |     #[export(ethabi, ethabi)]
  |                      ^^^^^^
